fixed scroll positioning on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-top: 100px;
+  padding-top: 11vh;
 }
 
 .image {
@@ -460,7 +460,7 @@
 }
 
 #press h2 {
-  margin-top: 0;
+  /* margin-top: 5px; */
 }
 
 #press-description {
